--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-******things to do before spring break (for demo to shi)
+******things to do before spring break
 Add Blockchain file(s)
 
 resturcture the login to be only for us, since we should be the only ones testing this
@@ -12,7 +12,7 @@ deploy to aws, explore other possiblities for deployment
 
 
 
-******things not curcial to do before demo to shi, but should be done
+******things not curcial to do, but should be done
 
 creating a config file with all critical information and keeping it out of github
 
@@ -25,10 +25,9 @@ Add other use cases, such as business wallets, relink
 
 Add formal wallets creation methods.
 
-save the blockchain to disk? -- no idea about this yet, could just be in a database, do not know enough about these things.
+save the blockchain to disk? -- no idea about this yet, 
 
 secruity and other nonfuctional requires, doesnt have to be rock tight, but we should at least make an effort 
-
 
 
 
