added some changes to these files

--- a/todo.txt
+++ b/todo.txt
@@ -1,33 +1,1 @@
-******things to do before spring break
-Add Blockchain file(s)
-
-resturcture the login to be only for us, since we should be the only ones testing this
-
-rewrite home.html to have fields for submitting transactions, submitting proof of purchase. 
-all have method to check the balance of a wallet.
-
-modify blockchain to suit our needs,  and have it print progress out to console for testing and demo purposes.
-
-deploy to aws, explore other possiblities for deployment 
-
-
-
-******things not curcial to do, but should be done
-
-creating a config file with all critical information and keeping it out of github
-
-
-
-
-*******things to worry about after/during spring break  
-
-Add other use cases, such as business wallets, relink
-
-Add formal wallets creation methods.
-
-save the blockchain to disk? -- no idea about this yet, 
-
-secruity and other nonfuctional requires, doesnt have to be rock tight, but we should at least make an effort 
-
-
-
+//more to add
